--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -22,17 +22,17 @@
 				  
 				  <div class="form-group">
 				  	<%= f.label :last_name, "Apellido(s)"%></br>
-				  	<%= f.email_field :last_name, class: "form-control"%>
+				  	<%= f.text_field :last_name, class: "form-control"%>
 				  </div>
 				  
 				  <div class="form-group">
 				  	<%= f.label :rnm, "RNM"%></br>
-				  	<%= f.text_fierd :rnm, class: "form-control"%>
+				  	<%= f.text_field :rnm, class: "form-control"%>
 				  </div>
 				  
 				  <div class="form-group">
 				  	<%= f.label :zipcode, "Código Postal"%></br>
-				  	<%= f.email_field :zipcode, class: "form-control"%>
+				  	<%= f.text_field :zipcode, class: "form-control"%>
 				  </div>
 				  
 				  <div class="form-group">
