--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,2 +1,14 @@
-<h1>Users#edit</h1>
-<p>Find me in app/views/users/edit.html.erb</p>
+<div class="row">
+  <div class="col-md-12">
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <div class="panel-title">
+          <h1>Información del Usuario</h1>
+        </div>
+      </div>
+      <div class="panel-body">
+		    <%= render 'form' %>
+	 		</div>
+    </div>
+  </div>
+</div>
