--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,11 +6,11 @@
     
 	<div class="btn-group pull-right" id="profileMenu">
     <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
-      <img src="http://png-1.findicons.com/files/icons/1072/face_avatars/300/i04.png" class="profile_menu-img" /> Eduardo Williams
+      <img src="http://png-1.findicons.com/files/icons/1072/face_avatars/300/i04.png" class="profile_menu-img" /> <%= current_user.last_name %>
       <span class="caret"></span>
     </button>
     <ul class="dropdown-menu" role="menu">
-      <li><%= link_to militant_path(current_user) do%>Mi Perfil<% end %></li>
+      <li><%= link_to user_path(current_user) do%>Mi Perfil<% end %></li>
       <li><%= link_to "Cerrar Sesión", destroy_user_session_path, :method => 'delete' %></li>
     </ul>
   </div>
@@ -35,44 +35,44 @@
 	      	<li><%= link_to "Iniciar Sesión", new_user_session_path%></li> 
 	      <% else %>
 	      	<% if current_user.admin? %> 
-		      	<li><%= link_to new_message_path do %><b>Mensaje Masivo</b><% end %></li>
 		        <li><%= link_to "Jugadores", users_path + "?role=jugador" %></li> 
 		        <li><%= link_to "Enlaces", users_path + "?role=enlace" %></li>
 		        <li><%= link_to "SubEnlaces", users_path + "?role=subenlace" %></li>
 	        	<li><%= link_to "Coordinadores", users_path + "?role=coordinador" %></li>
 		        <li><%= link_to "Candidatos", candidates_path %></li>
+		        <li><%= link_to new_message_path do %><b>Módulo de Comunicación</b>
+		        	<%end %></li>
 		        <li class="dropdown">
-		          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Votaciones <span class="caret"></span></a>
+		          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Administración <span class="caret"></span></a>
 		          <ul class="dropdown-menu" role="menu">
 		            <li><%= link_to "Votaciones", pollings_path %></li> 
-		            <li><%= link_to "Candidatos", candidate_votations_path %></li>
 		          </ul>
 		        </li>
 	        <% end %>
 	        <% if current_user.coordinador? %> 
-	        	<li><%= link_to new_message_path do %><b>Mensaje Masivo</b><% end %></li>
 		        <li><%= link_to "Jugadores", users_path + "?role=jugador" %></li> 
 		        <li><%= link_to "Enlaces", users_path + "?role=enlace" %></li>
 		        <li><%= link_to "SubEnlaces", users_path + "?role=subenlace" %></li>
 		        <li><%= link_to "Candidatos", candidates_path %></li>
+		        <li><%= link_to new_message_path do %><b>Módulo de Comunicación</b>
+		        	<%end %></li>
 		        <li class="dropdown">
-		          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Votaciones <span class="caret"></span></a>
+		          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Administración <span class="caret"></span></a>
 		          <ul class="dropdown-menu" role="menu">
 		            <li><%= link_to "Votaciones", pollings_path %></li> 
-		            <li><%= link_to "Candidatos", candidate_votations_path %></li>
 		          </ul>
 		        </li>
 	        <% end %>
 	        <% if current_user.enlace? %> 
-	        	<li><%= link_to new_message_path do %><b>Mensaje Masivo</b><% end %></li>
 		        <li><%= link_to "Jugadores", users_path + "?role=jugador" %></li> 
 		        <li><%= link_to "SubEnlaces", users_path + "?role=subenlace" %></li>
 		        <li><%= link_to "Candidatos", candidates_path %></li>
+		        <li><%= link_to new_message_path do %><b>Módulo de Comunicación</b>
+		        	<%end %></li>
 		        <li class="dropdown">
-		          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Votaciones <span class="caret"></span></a>
+		          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Administración <span class="caret"></span></a>
 		          <ul class="dropdown-menu" role="menu">
 		            <li><%= link_to "Votaciones", pollings_path %></li> 
-		            <li><%= link_to "Candidatos", candidate_votations_path %></li>
 		          </ul>
 		        </li>
 	        <% end %>
@@ -80,11 +80,11 @@
 	        	<li><%= link_to new_message_path do %><b>Mensaje Masivo</b><% end %></li>
 		        <li><%= link_to "Jugadores", users_path + "?role=jugador" %></li> 
 		        <li><%= link_to "Candidatos", candidates_path %></li>
+		        <li><%= link_to new_message_path do %><b>Módulo de Comunicación</b><% end %></li>
 		        <li class="dropdown">
-		          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Votaciones <span class="caret"></span></a>
+		          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Administración <span class="caret"></span></a>
 		          <ul class="dropdown-menu" role="menu">
 		            <li><%= link_to "Votaciones", pollings_path %></li> 
-		            <li><%= link_to "Candidatos", candidate_votations_path %></li>
 		          </ul>
 		        </li>
 	        <% end %>
