--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -48,8 +48,16 @@
         <%= f.date_select :register_date,  :html => { :class => 'form-control' } %>
       </div>
       <div class="form-group">
+        <%= f.label 'Edad' %><br>
+        <%= f.text_field :age, class: "form-control" %>
+      </div>
+      <div class="form-group">
         <%= f.label 'RNM' %><br>
         <%= f.text_field :rnm, class: "form-control" %>
+      </div>
+      <div class="form-group">
+        <%= f.label 'Género' %><br>
+        <%= f.collection_radio_buttons :gender, [['m', 'Hombre'] ,['h', 'Mujer']], :first, :last %>
       </div>
       <div class="form-group">
         <% if current_user.admin? %>
@@ -67,7 +75,6 @@
       </div>
     </div>
     <div class="col-md-4">
-
       <div class="form-group">
         <%= f.label 'Sección' %><br>
         <%= f.text_field :section, class: "form-control" %>
@@ -79,6 +86,18 @@
       <div class="form-group">
         <%= f.label 'Código Postal' %><br>
         <%= f.text_field :cp, class: "form-control" %>
+      </div>
+      <div class="form-group">
+        <%= f.label 'Calle y Número' %><br>
+        <%= f.text_field :street_number, class: "form-control" %>
+      </div>
+      <div class="form-group">
+        <%= f.label 'Colonia' %><br>
+        <%= f.text_field :neighborhood, class: "form-control" %>
+      </div>
+      <div class="form-group">
+        <%= f.label 'Ciudad' %><br>
+        <%= f.text_field :city, class: "form-control" %>
       </div>
     </div>
     	<%= f.hidden_field :password, :value => "12345678"%>
