Added groups role and views

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -39,6 +39,7 @@
 		        <li><%= link_to "SubEnlaces", users_path + "?role=subenlace" %></li>
 		        <li><%= link_to "Enlaces", users_path + "?role=enlace" %></li>
 	        	<li><%= link_to "Coordinadores", users_path + "?role=coordinador" %></li>
+	        	<li><%= link_to "Grupos", users_path + "?role=grupo" %></li>
 		        <li><%= link_to "Candidatos", candidates_path %></li>
 		        <li><%= link_to new_message_path do %><b>Módulo de Comunicación</b>
 		        	<%end %></li>
