--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -19,7 +19,7 @@
 <div class="row">
 	<div class="col-md-6">
 		<h4>Nivel Jerárquico:</h4>
-		<b><%=@user.role%></b>
+		<b class="capitalize"><%=@user.role%></b>
 	</div>
 	<div class="col-md-6">
 		<h4>Reporta A</h4>
