--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -76,6 +76,10 @@
           <%= f.input :role, collection: User::ROLES_GRUPO, :label => "Rol", class: "form-control"%>
         <% end %>
       </div>
+      <div class="form-group">
+      	<%= f.label 'Reporta A:' %><br>
+        <%= f.input :parent, collection: User::ROLES_ENLACE, :label => false, class: "form-control"%>
+      </div>
     </div>
     <div class="col-md-4">
       <div class="form-group">
