--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -12,3 +12,11 @@
     </div>
   </div>
 </div>
+
+<script type="text/javascript">
+	$(function(){
+		$('select').change(function(){
+			console.log('ok');
+		});
+	});
+</script>
