--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -60,18 +60,23 @@
         <%= f.collection_radio_buttons :gender, [['m', 'Hombre'] ,['h', 'Mujer']], :first, :last %>
       </div>
       <div class="form-group">
+        <%= f.label 'Nivel Jerárquico:' %>
         <% if current_user.admin? %>
-          <%= f.input :role, collection: User::ROLES_ADMIN, class: "form-control"%>
+          <%= f.input_field :role, collection: User::ROLES_ADMIN, class: "form-control"%>
         <% end %>
         <% if current_user.coordinador? %>
-          <%= f.input :role, collection: User::ROLES_COORDINADOR, :label => "Rol", class: "form-control"%>
+          <%= f.input_field :role, collection: User::ROLES_COORDINADOR, :label => "Rol", class: "form-control"%>
         <% end %>
         <% if current_user.enlace? %>
-          <%= f.input :role, collection: User::ROLES_ENLACE, :label => "Rol", class: "form-control"%>
+          <%= f.input_field :role, collection: User::ROLES_ENLACE, :label => "Rol", class: "form-control"%>
         <% end %>
         <% if current_user.subenlace? %>
-          <%= f.input :role, collection: User::ROLES_SUBENLACE, :label => "Rol", class: "form-control"%>
+          <%= f.input_field :role, collection: User::ROLES_SUBENLACE, :label => "Rol", class: "form-control"%>
         <% end %>
+      </div>
+      <div class="form-group">
+        <%= f.label 'Reporta a:' %>
+        <%= f.input_field :parent, collection: @codinators, :label => "Rol", class: "form-control"%>
       </div>
     </div>
     <div class="col-md-4">
@@ -106,6 +111,6 @@
   <div class="actions">
     <hr>
     <%= f.submit 'Agregar', :class=>"btn btn-primary" %>
-    <%= link_to 'Cancelar', users_path, :class=>"btn btn-danger" %>
+    <%= link_to 'Cancelar', :back, :class=>"btn btn-danger" %>
   </div>
 <% end %>
