--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -3,7 +3,7 @@
     <div class="panel panel-default">
       <div class="panel-heading">
         <div class="panel-title">
-          <h1>Información del Usuario</h1>
+          Información del Usuario
         </div>
       </div>
       <div class="panel-body">
