--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -38,12 +38,10 @@
       <th>Sección</th>
       <th>Edad</th>
       <th>Sexo</th>
-      <th>Calle</th>
+      <th>Reporta a</th>
       <th>Colonia</th>
-      <th>Municipio</th>
       <th></th>
       <% if @canedit %>
-        <th></th>
         <th></th>
       <% end %>
     </tr>
@@ -56,22 +54,18 @@
         <td><%= user.first_name %> <%= user.last_name %> <%= user.name %></td>
         <td><%= user.cp %></td>
         <td class="cellphone"><%= user.cellphone %></td>
-        <td><a href="mailto:<%= user.email %>"><%= user.email %></a></td>
+        <td><%= user.email %></td>
         <td><%= user.section %></td>
         <td><%= user.age %></td>
         <td><%= user.gender %></td>
-        <td><%= user.street_number %></td>
+        <td><%= user.parent != 0 ? User.find(user.parent).name : 'Nadie' %></td>
         <td><%= user.neighborhood %></td>
-        <td><%= user.city %></td>
         <td class="center">
           <% if @canedit %>
             <%= link_to user_path user, :class=> 'table-action' do%><span class="glyphicon glyphicon-eye-open"></span><%end%>
           <% end %>
         </td>
         <% if @canedit %>
-          <td class="center">
-              <%= link_to edit_user_path(user), :class=> 'table-action' do%><span class="glyphicon glyphicon-pencil"></span><%end%>
-          </td>
           <td class="center">
           	<%= link_to "/users/"+user.id.to_s, method: :delete, data: { confirm: '¿Está seguro que desea eliminar?' } , :class=> 'table-action' do%><span class="glyphicon glyphicon-remove"></span><% end %>
           </td>
