Add assets an paginate

--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -1,5 +1,8 @@
-@import 'bootstrap';
+$navbar-inverse-bg: #05276c;
+$navbar-inverse-link-color: white;
 
 .table tr td{
 	font-size:12px;
 }
+
+@import 'bootstrap';
