--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,9 @@
   </script>
 	<script src='//google-maps-utility-library-v3.googlecode.com/svn/tags/markerclustererplus/2.0.14/src/markerclusterer_packed.js' type='text/javascript'>
 	</script>
+	<script type="text/javascript">
+		window.role = "<%= params[:role] %>";
+	</script>
 </head>
 <body>
 	<%= render 'layouts/header' %>
