--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -37,6 +37,7 @@
 		<div class="col-md-4">
 			<p ><b>Seccion:</b><%= @user.section %></p>
 			<p><b>Sector: </b><%= @user.sector %></p>
+			<p><b>Código Postal: </b><%= @user.zipcode %></p>
 			<p><b>Calle y Número: </b><%= @user.street_number %></p>
 			<p><b>Colonia: </b><%= @user.neighborhood %></p>
 			<p><b>Ciudad: </b><%= @user.city %></p>
