--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -12,53 +12,67 @@
   <% end %>
   <div class="row">
     <div class="col-md-4">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="form-group">
+            <%= f.label 'Nombre' %><br>
+            <%= f.text_field :name, class: "form-control" %>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="form-group">
+            <%= f.label 'Paterno' %><br>
+            <%= f.text_field :first_name, class: "form-control" %>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="form-group">
+            <%= f.label 'Materno' %><br>
+            <%= f.text_field :last_name, class: "form-control" %>
+          </div>
+        </div>
+      </div>
       <div class="form-group">
         <%= f.label 'Fecha de Nacimiento' %><br>
         <%= f.date_select :bird, class: "form-control", :order => [:day, :month, :year], :start_year => 1950 %>
-      </div>
-      <div class="form-group">
-        <%= f.label 'Apellido Paterno' %><br>
-        <%= f.text_field :first_name, class: "form-control" %>
-      </div>
-      <div class="form-group">
-        <%= f.label 'Apellido Materno' %><br>
-        <%= f.text_field :last_name, class: "form-control" %>
-      </div>
-      <div class="form-group">
-        <%= f.label 'Nombre' %><br>
-        <%= f.text_field :name, class: "form-control" %>
-      </div>
-      
-      <div class="form-group">
-        <%= f.label 'Telefono' %><br>
-        <%= f.text_field :phone, class: "form-control" %>
-      </div>
-      <div class="form-group">
-        <%= f.label 'Celular' %><br>
-        <%= f.text_field :cellphone, class: "form-control" %>
-      </div>
-      <div class="form-group">
-        <%= f.label 'Correo Electrónico' %><br>
-        <%= f.text_field :email, class: "form-control" %>
-      </div>
-    </div>
-    <div class="col-md-4">
-      <div class="form-group">
-        <%= f.label 'Fecha de Registro' %><br>
-        <%= f.date_select :register_date,  :html => { :class => 'form-control' } %>
       </div>
       <div class="form-group">
         <%= f.label 'Edad' %><br>
         <%= f.text_field :age, class: "form-control" %>
       </div>
       <div class="form-group">
+        <%= f.label 'Sexo' %><br>
+        <%= f.collection_radio_buttons :gender, [['m', 'Hombre'] ,['h', 'Mujer']], :first, :last %>
+      </div>
+      <div class="form-group">
+        <%= f.label 'Correo Electrónico' %><br>
+        <%= f.text_field :email, class: "form-control" %>
+      </div>
+      <div class="row">
+        <div class="col-md-6">
+          <div class="form-group">
+            <%= f.label 'Telefono' %><br>
+            <%= f.text_field :phone, class: "form-control" %>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="form-group">
+            <%= f.label 'Celular' %><br>
+            <%= f.text_field :cellphone, class: "form-control" %>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class="form-group">
         <%= f.label 'RNM' %><br>
         <%= f.text_field :rnm, class: "form-control" %>
       </div>
       <div class="form-group">
-        <%= f.label 'Género' %><br>
-        <%= f.collection_radio_buttons :gender, [['m', 'Hombre'] ,['h', 'Mujer']], :first, :last %>
+        <%= f.label 'Fecha de Registro' %><br>
+        <%= f.date_select :register_date,  :html => { :class => 'form-control' } %>
       </div>
+      
       <div class="form-group">
         <%= f.label 'Nivel Jerárquico:' %>
         <% if current_user.admin? %>
