--- a/app/views/candidates/index.html.erb
+++ b/app/views/candidates/index.html.erb
@@ -25,7 +25,6 @@
       <th class="center">Género</th>
       <th></th>
       <th></th>
-      <th></th>
     </tr>
   </thead>
 
@@ -34,7 +33,7 @@
       <tr>
         <td><%= candidate.name %></td>
         <td class="center"><%= candidate.age %></td>
-        <td class="center"><%= candidate.sex %></td>
+        <td class="center"><%= candidate.gender %></td>
         <td class="center">
             <%= link_to candidate, :class=> 'table-action' do%><span class="glyphicon glyphicon-eye-open"></span><%end%>
         </td>
