--- a/app/views/candidates/show.html.erb
+++ b/app/views/candidates/show.html.erb
@@ -1,18 +1,18 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>:</strong>
+  <strong>Nombre:</strong>
   <%= @candidate.name %>
 </p>
 
 <p>
-  <strong>Age:</strong>
+  <strong>Edad:</strong>
   <%= @candidate.age %>
 </p>
 
 <p>
-  <strong>Sex:</strong>
-  <%= @candidate.sex %>
+  <strong>Sexo:</strong>
+  <%= @candidate.gender %>
 </p>
 
 <%= link_to 'Edit', edit_candidate_path(@candidate) %> |
