--- a/app/views/candidates/_form.html.erb
+++ b/app/views/candidates/_form.html.erb
@@ -20,7 +20,7 @@
   </div>
   <div class="form-group">
     <%= f.label 'Sexo' %><br>
-    <%= f.text_field :sex, class: "form-control" %>
+    <%= f.text_field :gender, class: "form-control" %>
   </div>
   <div class="actions">
     <%= f.submit "Crear Candidato", :class=>"btn btn-primary"%>
