--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -46,7 +46,8 @@
 		        <li class="dropdown">
 		          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Administración <span class="caret"></span></a>
 		          <ul class="dropdown-menu" role="menu">
-		            <li><%= link_to "Votaciones", pollings_path %></li> 
+		            <li><%= link_to "Votaciones", pollings_path %></li>
+		            <li><%= link_to "Candidatos a Votación", candidate_votations_path %></li>  
 		          </ul>
 		        </li>
 	        <% end %>
@@ -61,6 +62,7 @@
 		          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Administración <span class="caret"></span></a>
 		          <ul class="dropdown-menu" role="menu">
 		            <li><%= link_to "Votaciones", pollings_path %></li> 
+		            <li><%= link_to "Candidatos a Votación", candidate_votations_path %></li> 
 		          </ul>
 		        </li>
 	        <% end %>
@@ -74,6 +76,7 @@
 		          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Administración <span class="caret"></span></a>
 		          <ul class="dropdown-menu" role="menu">
 		            <li><%= link_to "Votaciones", pollings_path %></li> 
+		            <li><%= link_to "Candidatos a Votación", candidate_votations_path %></li> 
 		          </ul>
 		        </li>
 	        <% end %>
@@ -85,7 +88,8 @@
 		        <li class="dropdown">
 		          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Administración <span class="caret"></span></a>
 		          <ul class="dropdown-menu" role="menu">
-		            <li><%= link_to "Votaciones", pollings_path %></li> 
+		            <li><%= link_to "Votaciones", pollings_path %></li>
+		            <li><%= link_to "Candidatos a Votación", candidate_votations_path %></li> 
 		          </ul>
 		        </li>
 	        <% end %>
