--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -113,7 +113,7 @@
   </div>
   <div class="actions">
     <hr>
-    <%= f.submit 'Agregar', :class=>"btn btn-primary" %>
+    <%= f.submit 'Guardar', :class=>"btn btn-primary" %>
     <%= link_to 'Cancelar', :back, :class=>"btn btn-danger" %>
   </div>
 <% end %>
