--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -59,13 +59,13 @@
 	</div>
 	<%= simple_form_for Vote.new do |f| %>
 		<div class="col-md-4">
-			<%= f.association :polling, :include_blank => false, :class=>"form-control", label: false, input_html: { class: 'form-control' } %>
+			<%= f.association :polling, as: :select,:include_blank => false, :class=>"form-control", label: false, input_html: { class: 'form-control' } %>
 		</div>
 		<div class="col-md-5">
 			<%= f.association :candidate, :include_blank => false, :class=>"form-control", label: false, input_html: { class: 'form-control' }%>
 		</div>
 		<div class="col-md-3">
-                        <%= f.hidden_field :militant_id, :value => current_user.id %>
+                        <%= f.hidden_field :user_id, :value => current_user.id %>
 			<%= submit_tag("Registrar Voto", class:"btn btn-primary btn-block") %>
 		</div>
 	<% end %>
