--- a/app/views/votes/index.html.erb
+++ b/app/views/votes/index.html.erb
@@ -4,7 +4,7 @@
   <thead>
     <tr>
       <th>Candidato</th>
-      <th>Militante</th>
+      <th>Jugador</th>
       <th></th>
       <th></th>
       <th></th>
@@ -15,7 +15,7 @@
     <% @votes.each do |vote| %>
       <tr>
         <td><%= vote.candidate.name %></td>
-        <td><%= vote.militant.name %></td>
+        <td><%= vote.user_id %></td>
         <td class="center"><%= link_to vote, :class=> 'table-action' do%><span class="glyphicon glyphicon-eye-open"></span><%end%></td>
         <td class="center">
             <%= link_to edit_vote_path(vote), :class=> 'table-action' do%><span class="glyphicon glyphicon-pencil"></span><%end%>
