Several validations and fixes. Now using PG as dbms

--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -31,7 +31,7 @@
     <% @groups.each do |group| %>
       <tr>
         <td><%= group.name %></td>
-        <td><%= group.candidate_id %></td>
+        <td><%= group.candidate.name %></td>
         <td class="center">
             <%= link_to edit_group_path(group), :class=> 'table-action' do%><span class="glyphicon glyphicon-pencil"></span><%end%>
         </td>
