--- a/app/views/candidates/index.html.erb
+++ b/app/views/candidates/index.html.erb
@@ -1,30 +1,16 @@
 <h2>Candidatos</h2>
 <hr />
-<div class="row">
-	<div class="col-md-4">
-		    <input type="text" class="form-control" placeholder="Buscar por Nombre">
-	</div>
-	<div class="col-md-3">
-		<select class="form-control"><option>--Seleccione Género--</option><option>Masculino</option><option>Femenino</option></select>
-	</div>
-	<div class="col-md-3">
-		<select class="form-control"><option>--Seleccione Edad--</option><option>Masculino</option><option>Femenino</option></select>
-	</div>
-	<div class="col-md-2">
-		<%= link_to new_candidate_path, :class=>"btn btn-success btn-block" do%>
-			<span class="glyphicon glyphicon-plus-sign"></span> Nuevo
-		<%end%>
-	</div>
-</div>
-<br />
 <table class="table table-hover table-bordered table-striped" >
   <thead>
     <tr>
       <th>Nombre</th>
       <th class="center">Edad</th>
       <th class="center">Género</th>
-      <th></th>
-      <th></th>
+      <th colspan="2">
+        <%= link_to new_candidate_path, :class=>"btn btn-success btn-block" do%>
+          <span class="glyphicon glyphicon-plus-sign"></span> Nuevo
+        <%end%>
+      </th>
     </tr>
   </thead>
 
