--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,29 +1,16 @@
 <h2>Grupos</h2>
 <hr />
-<div class="row">
-	<div class="col-md-4">
-		    <input type="text" class="form-control" placeholder="Buscar por Nombre">
-	</div>
-	<div class="col-md-3">
-		<select class="form-control"><option>--Seleccione Grupo--</option><option>Zapatista</option><option>Villista</option></select>
-	</div>
-	<div class="col-md-3">
-		<select class="form-control"><option>--Seleccione Candidato--</option><option>Eduardo de la Cruz</option><option>Amber Di Stefano</option></select>
-	</div>
-	<div class="col-md-2">
-		<%= link_to new_group_path, :class=>"btn btn-success btn-block" do%>
-			<span class="glyphicon glyphicon-plus-sign"></span> Nuevo
-		<%end%>
-	</div>
-</div>
-<br />
+
 <table class="table table-hover table-triped table-bordered">
   <thead>
     <tr>
       <th>Nombre</th>
       <th>Candidato</th>
-      <th></th>
-      <th></th>
+      <th colspan="2">
+        <%= link_to new_group_path, :class=>"btn btn-success btn-block" do%>
+        <span class="glyphicon glyphicon-plus-sign"></span> Nuevo
+        <%end%>
+      </th>
     </tr>
   </thead>
 
