--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -41,8 +41,8 @@
 	        	<li><%= link_to "Coordinadores", users_path + "?role=coordinador" %></li>
 	        	<li><%= link_to "Grupos", groups_path%></li>
 		        <li><%= link_to "Candidatos", candidates_path %></li>
-		        <li><%= link_to new_message_path do %><b>Módulo de Comunicación</b>
-		        	<%end %></li>
+		        <!-- <li><%= link_to new_message_path do %><b>Módulo de Comunicación</b>
+		        	<%end %></li> -->
 		        <li class="dropdown">
 		          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Administración <span class="caret"></span></a>
 		          <ul class="dropdown-menu" role="menu">
