--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -42,7 +42,7 @@
       </div>
       <div class="form-group">
         <%= f.label 'Sexo' %><br>
-        <%= f.collection_radio_buttons :gender, [['m', 'Hombre'] ,['h', 'Mujer']], :first, :last %>
+        <%= f.collection_radio_buttons :gender, [['H', 'Hombre'] ,['M', 'Mujer']], :first, :last %>
       </div>
       <div class="form-group">
         <%= f.label 'Correo Electrónico' %><br>
