--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -93,7 +93,7 @@
       </div>
       <div class="form-group" id="group">
         <%= f.label 'Grupos:' %><br>
-        <%= f.input_field :group_id, collection: Group.all, class: "form-control", required: true%>
+        <%= f.input_field :group_id, collection: Group.all, class: "form-control", required: false%>
       </div>
       <div class="form-group">
       	<%= f.label 'Reporta A:' %><br>
